<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bodyBg" >
    
    <include 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        layout="@layout/header" 
        android:layout_gravity="top">
    </include>
    
    <LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        >

       	<Button 
		    android:id="@+id/checkAllButton"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
       	    android:layout_weight="1"
		    android:textColor="@color/buttonText"
		    android:text="@string/checkAllButton"
		    android:background="@drawable/login_bg"
		    android:onClick="CheckAll"
	    />
       	<Button
       	    android:id="@+id/deleteButton"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
       	    android:onClick="delete"
       	    android:text="@string/deleteButton"
		    android:background="@drawable/login_bg"
       	    android:textColor="@color/buttonText" />
        
    </LinearLayout>
    
    <ListView android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    
   	<TextView android:id="@+id/android:empty"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/noVideo"
		/>
   	
  	<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     >
	    
	     <include 
	        android:layout_width="match_parent" 
	        android:layout_height="wrap_content" 
	        layout="@layout/footer" 
	        android:layout_gravity="bottom">
	     </include>
	      
	</LinearLayout>
   	
</LinearLayout>